--- a/package.json
+++ b/package.json
@@ -18,9 +18,21 @@
   },
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
+  "files": [
+    "dist/"
+  ],
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "balena-lint --fix"
+    ]
+  },
   "scripts": {
-    "build": "tsc",
-    "clean": "rm *.log ./dist ./node_modules -rf"
+    "clean": "rimraf *.log dist",
+    "build": "npm run clean && tsc",
+    "lint": "balena-lint index.ts",
+    "lint-fix": "balena-lint --fix index.ts",
+    "test": "npm run lint",
+    "prepack": "npm run build"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -28,9 +40,16 @@
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
+    "@balena/lint": "^6.1.1",
     "@types/express": "^4.17.12",
     "@types/node": "^16.0.0",
+    "lint-staged": "^11.1.1",
+    "rimraf": "^3.0.2",
+    "simple-git-hooks": "^2.5.1",
     "typescript": "^4.3.5"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
   },
   "versionist": {
     "publishedAt": "2021-07-30T03:19:19.940Z"
